metadata/objects/graxcasehistory_cindex__x.object
<CustomObject>
    <description>graxcasehistory__cindex</description>
    <externalDataSource>grax_odata</externalDataSource>
    <externalName>graxcasehistory__cindex</externalName>
    <fields>
        <fullName>CaseId_c__c</fullName>
        <description>CaseId__c</description>
        <externalDeveloperName>CaseId__c</externalDeveloperName>
        <label>CaseId__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseId_c_grax_xf_case__c</fullName>
        <description>CaseId__c_grax_xf_case</description>
        <externalDeveloperName>CaseId__c_grax_xf_case</externalDeveloperName>
        <label>CaseId__c_grax_xf_case</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <description>CreatedById</description>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>CreatedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById_c__c</fullName>
        <description>CreatedById__c</description>
        <externalDeveloperName>CreatedById__c</externalDeveloperName>
        <label>CreatedById__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById_c_grax_xf_user__c</fullName>
        <description>CreatedById__c_grax_xf_user</description>
        <externalDeveloperName>CreatedById__c_grax_xf_user</externalDeveloperName>
        <label>CreatedById__c_grax_xf_user</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById_grax_xf_user__c</fullName>
        <description>CreatedById_grax_xf_user</description>
        <externalDeveloperName>CreatedById_grax_xf_user</externalDeveloperName>
        <label>CreatedById_grax_xf_user</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>CreatedDate</description>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatedDate_c__c</fullName>
        <description>CreatedDate__c</description>
        <externalDeveloperName>CreatedDate__c</externalDeveloperName>
        <label>CreatedDate__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_c__c</fullName>
        <description>External_ID__c</description>
        <externalDeveloperName>External_ID__c</externalDeveloperName>
        <label>External_ID__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_c__c</fullName>
        <description>Field__c</description>
        <externalDeveloperName>Field__c</externalDeveloperName>
        <label>Field__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAXCompanyName__c</fullName>
        <description>GRAXCompanyName</description>
        <externalDeveloperName>GRAXCompanyName</externalDeveloperName>
        <label>GRAXCompanyName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Execution_Unique_Key__c</fullName>
        <description>GRAX_Execution_Unique_Key</description>
        <externalDeveloperName>GRAX_Execution_Unique_Key</externalDeveloperName>
        <label>GRAX_Execution_Unique_Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Execution_Unique_Keys__c</fullName>
        <description>GRAX_Execution_Unique_Keys</description>
        <externalDeveloperName>GRAX_Execution_Unique_Keys</externalDeveloperName>
        <label>GRAX_Execution_Unique_Keys</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Version__c</fullName>
        <description>GRAX_Version</description>
        <externalDeveloperName>GRAX_Version</externalDeveloperName>
        <label>GRAX_Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <description>Id</description>
        <externalDeveloperName>Id</externalDeveloperName>
        <label>Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsDeleted</description>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLocked__c</fullName>
        <description>IsLocked</description>
        <externalDeveloperName>IsLocked</externalDeveloperName>
        <label>IsLocked</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <description>LastModifiedById</description>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>LastModifiedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedById_grax_xf_user__c</fullName>
        <description>LastModifiedById_grax_xf_user</description>
        <externalDeveloperName>LastModifiedById_grax_xf_user</externalDeveloperName>
        <label>LastModifiedById_grax_xf_user</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>LastModifiedDate</description>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MayEdit__c</fullName>
        <description>MayEdit</description>
        <externalDeveloperName>MayEdit</externalDeveloperName>
        <label>MayEdit</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name</description>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewValue_c__c</fullName>
        <description>NewValue__c</description>
        <externalDeveloperName>NewValue__c</externalDeveloperName>
        <label>NewValue__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldValue_c__c</fullName>
        <description>OldValue__c</description>
        <externalDeveloperName>OldValue__c</externalDeveloperName>
        <label>OldValue__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <description>SystemModstamp</description>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>SystemModstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id_c__c</fullName>
        <description>analyticsdemo_batch_id__c</description>
        <externalDeveloperName>analyticsdemo_batch_id__c</externalDeveloperName>
        <label>analyticsdemo_batch_id__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxModifiedTime__c</fullName>
        <description>graxModifiedTime</description>
        <externalDeveloperName>graxModifiedTime</externalDeveloperName>
        <label>graxModifiedTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>grax_CaseId_r_CaseNumber__c</fullName>
        <description>grax_CaseId__r_CaseNumber</description>
        <externalDeveloperName>grax_CaseId__r_CaseNumber</externalDeveloperName>
        <label>grax_CaseId__r_CaseNumber</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_CreatedById_r_Name__c</fullName>
        <description>grax_CreatedById__r_Name</description>
        <externalDeveloperName>grax_CreatedById__r_Name</externalDeveloperName>
        <label>grax_CreatedById__r_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_CreatedBy_Name__c</fullName>
        <description>grax_CreatedBy_Name</description>
        <externalDeveloperName>grax_CreatedBy_Name</externalDeveloperName>
        <label>grax_CreatedBy_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_LastModifiedBy_Name__c</fullName>
        <description>grax_LastModifiedBy_Name</description>
        <externalDeveloperName>grax_LastModifiedBy_Name</externalDeveloperName>
        <label>grax_LastModifiedBy_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_case_xf__c</fullName>
        <description>grax_case_xf</description>
        <externalDeveloperName>grax_case_xf</externalDeveloperName>
        <label>grax_case_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_casehistory_c_name__c</fullName>
        <description>grax_casehistory__c_name</description>
        <externalDeveloperName>grax_casehistory__c_name</externalDeveloperName>
        <label>grax_casehistory__c_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_casehistory_c_xf__c</fullName>
        <description>grax_casehistory__c_xf</description>
        <externalDeveloperName>grax_casehistory__c_xf</externalDeveloperName>
        <label>grax_casehistory__c_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_user_xf__c</fullName>
        <description>grax_user_xf</description>
        <externalDeveloperName>grax_user_xf</externalDeveloperName>
        <label>grax_user_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_xf__c</fullName>
        <description>grax_xf</description>
        <externalDeveloperName>grax_xf</externalDeveloperName>
        <label>grax_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxid__c</fullName>
        <description>graxid</description>
        <externalDeveloperName>graxid</externalDeveloperName>
        <label>graxid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxorgid__c</fullName>
        <description>graxorgid</description>
        <externalDeveloperName>graxorgid</externalDeveloperName>
        <label>graxorgid</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>graxcasehistory__cindex</label>
    <pluralLabel>graxcasehistory__cindex</pluralLabel>
</CustomObject>